# KeilProc

./: LICENSE  README.md  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  runeasy_gui.py
app/gui/: legacy_parser_panel.py  main_window.py  run_easy_panel.py
config/: transmitter_profiles.json
docs/: qa.md
kielproc/: __init__.py  aggregate.py  cli.py  deming.py  geometry.py  gui.py  gui_adapter.py  io.py  normalize.py  physics.py  piccolo.py  presets.py  profile_xi.py  profiles.py  report.py  report_pdf.py  run_easy.py  setpoints.py  setpoints_csv.py  temp_select.py  transmitter.py  transmitter_flow.py  transmitter_profiles.py  visuals.py
kielproc/parsers/: __init__.py  ingest_legacy.py  legacy_xlsx.py
kielproc/tools/: __init__.py  legacy_overlay.py  recalc.py  venturi_builder.py
kielproc/tools/legacy_parser/: __init__.py  parser.py
kielproc_monorepo/: README.md  README_legacy.md  constraints.txt  duct_dp_visualizer.py  kielproc_gui_adapter.py  pyproject.toml  requirements.txt  start_legacy_parser.py  ui_polish.py
kielproc_monorepo/gui/: app_gui.py  duct_dp_visualizer_tk_original.py  run_easy_tab.py
kielproc_monorepo/kielproc/: __init__.py  aggregate.py  cli.py  deming.py  geometry.py  gui_adapter.py  lag.py  legacy_results.py  operator_cli.py  physics.py  pooling.py  qa.py  report.py  run_easy.py  setpoints.py  setpoints_csv.py  translate.py  visuals.py
kielproc_monorepo/tests/: test_app_gui_utils.py  test_cli_one_click.py  test_cli_results.py  test_core.py  test_fit_plateau_piccolo.py  test_fit_setpoints_plot.py  test_gui_adapter_df.py  test_integrate_autodiscover.py  test_kielproc_basic.py  test_lag.py  test_legacy_cube.py  test_legacy_parser_temp_copy.py  test_legacy_results.py  test_one_click_e2e.py  test_port_discovery.py  test_qa.py  test_run_easy_orchestrator.py  test_run_easy_panel_beta_override.py  test_run_easy_panel_fit_beta_override.py  test_run_easy_panel_integration.py  test_run_easy_panel_runner.py  test_temperature_guard.py  test_translate.py  test_translate_beta_override.py  test_unit_aliases.py  test_units_and_integration.py
kielproc_monorepo/tools/legacy_parser/: README.md  parser_gui.py
kielproc_monorepo/tools/legacy_parser/legacy_parser/: 1C Mill Airflow Test 63 TH FU 26-9-11 (2).xlsx  1C Mill Airflow Test 70TH 1-10-2018.xls  1C Mill Airflow Test 74TH 18-6-07.xls  MLLCALCS.XLS  __init__.py  data filter test.xlsx  parser.py
tests/: test_cli_one_click.py  test_cli_results.py  test_extract_temperature.py  test_run_all_api.py  test_run_all_pipeline.py  test_run_easy_artifacts.py  test_run_easy_summary.py  test_transmitter_profiles.py  test_venturi_builder.py
tools/installer/: keilproc.iss
tools/run_template/: geometry.json  weights.json
