
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kielproc"
version = "0.1.0"
description = "Kiel + wall-static baseline and legacy piccolo translation, with Tk GUI"
authors = [{name="Brandon Martin"}]
license = "MIT"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
gui = []

[project.scripts]
kielproc = "kielproc.cli:main"

[tool.setuptools.packages.find]
include = ["kielproc"]
